git fixes wrong margins in the header section on a low resolution

--- a/style.css
+++ b/style.css
@@ -280,7 +280,7 @@ ul li a{
 
 @media screen and (max-width: 438px) {
     header {
-        margin: 67px 0 0 0;
+        margin: 48px 0 0 0;
     }
     .navitem {
         margin:0;
